--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,6 @@
 @import "variables";
 @import "../../../../Downloads/landingplate-master/node_modules/bootstrap/scss/bootstrap";
+
+div {
+  color: red;
+}
